--- a/src/mainstyle.css
+++ b/src/mainstyle.css
@@ -6,15 +6,7 @@ body {
 html {
     height: -webkit-fill-available;
 }
-  
-  main {
-    height: 100vh;
-    height: -webkit-fill-available;
-    max-height: 100vh;
-    overflow-x: auto;
-    overflow-y: hidden;
-  }
-  
+
   .dropdown-toggle { outline: 0; }
   
   .btn-toggle {
@@ -127,7 +119,7 @@ body:before {
     background-image: url('images/black.jpg')
 }
 
-#main {
+.main {
     display: flex;
     position: relative;
     max-width: 100%;
@@ -163,7 +155,7 @@ body:before {
     transform-origin: 50% 50%;
 }
 
-#main > .inner {
+.main > .inner {
     position: relative;
     z-index: 1;
     border-radius: inherit;
@@ -273,12 +265,14 @@ font-size: 150%
 
 #chance, #end {
   display:none;
+  position: relative;
+  z-index: 9;
 }
 
 #overlay {
   position: fixed;
-  width: 100vw;
-  height: 100vh;
+  width: 200vw;
+  height: 200vh;
   top: 0;
   left: 0;
   right: 0;
@@ -287,7 +281,6 @@ font-size: 150%
   z-index: 2;
 }
 
-#chance {
-  position: relative;
-  z-index: 9;
+#cusrsed_main, #cusrsed_inner {
+    display: inline;
 }
