--- a/src/mainstyle.css
+++ b/src/mainstyle.css
@@ -236,6 +236,7 @@ body:before {
 .blog{
  background: lavenderblush;
  margin: 10px;
+ padding-bottom: 20px;
 }
 .blog_title {
 font-size: 150%
@@ -283,4 +284,9 @@ font-size: 150%
 
 #cusrsed_main, #cusrsed_inner {
     display: inline;
+}
+
+.comment_name {
+font-family:Electrolize;
+color:brown;
 }
