--- a/src/mainstyle.css
+++ b/src/mainstyle.css
@@ -238,6 +238,11 @@ body:before {
  margin: 10px;
  padding-bottom: 20px;
 }
+
+.blog > .image {
+  width:25%;
+}
+
 .blog_title {
 font-size: 150%
 }
